css improvements (logo, text alignment, ...)

--- a/css/osp-slides.css
+++ b/css/osp-slides.css
@@ -1,5 +1,5 @@
 .reveal .slides {
-	background-image: url("images/osp_logo_rgba70.png");
+	background-image: url("../images/osp_logo_rgba70.png");
 	background-repeat: no-repeat;
     background-position: right top;
 }
